--- a/countdown.html
+++ b/countdown.html
@@ -46,7 +46,7 @@ body{
 
 .numbers {
   font-family: 'Montserrat', sans-serif;
-  color:  #183059;
+  color:  #8DCAE6;
   font-size: 4em;
   text-align: center;
 }
